# codexbox

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  codex-docker  codexbox  codexbox_image_sync.py  container-entrypoint.sh  containers.conf  install.sh  podman-containers.conf  spec.md  vars-to-ignore.txt
.github/workflows/: ci.yml
src/: add_dirs.rs  approval.rs  certs.rs  cli.rs  codex_config.rs  config.rs  env_filter.rs  env_mounts.rs  errors.rs  launcher.rs  lib.rs  main.rs  mounts.rs  path_utils.rs  podman.rs  policy.rs  user_config.rs  user_context.rs
src/config/: codex.rs  mod.rs  user.rs
src/podman/: assets.rs  image.rs  mod.rs  run.rs
src/sandbox/: add_dirs.rs  approval.rs  env_filter.rs  env_mounts.rs  mod.rs  mounts.rs
tests/: cli_behavior.rs  container_entrypoint.rs  podman_smoke.rs  test_codexbox.py
