[package]
name = "codexbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4"
home = "0.5"
nix = { version = "0.29", default-features = false, features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
toml = "0.8"
